# gdscheck

./: .gitignore  .yamllint  Cargo.toml  README.md  README.rst  REUSE.toml  build.rs  justfile
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  drc_violation.yml
.github/workflows/: docs-check.yml  docs-publish.yml  license-check.yml  rust-check.yml  yaml-lint.yml
docs/: requirements.txt
docs/source/: architecture.rst  changelog.rst  conf.py  contributing.rst  faq.rst  glossary.rst  index.rst  pdk-authoring.rst  reports.rst  usage.rst  virtual-ops.rst
docs/source/checks/: antenna_ratio.rst  coverage.rst  exact_width.rst  (+40 more)
pdks/ihp-sg13cmos5l/: pdk.yml
pdks/ihp-sg13g2/: pdk.yml
src/: cache.rs  connectivity.rs  flatten.rs  layout.rs  lib.rs  main.rs  merge.rs  pdk.rs  report.rs  violation.rs
src/checks/: antenna_ratio.rs  area.rs  coverage.rs  density.rs  exact_width.rs  extent.rs  forbidden.rs  forbidden_overlap.rs  forbidden_unless_labeled.rs  gate_connected_min_area.rs  gate_length.rs  helper.rs  inside_boundary.rs  max_enclosure.rs  max_space.rs  max_total_area.rs  max_width.rs  min_45_width.rs  min_array_space.rs  min_enclosed_area.rs  min_enclosure.rs  min_endcap_enclosure.rs  min_extension.rs  min_notch.rs  min_region_density.rs  min_space.rs  min_space_bent.rs  min_space_prl.rs  min_width.rs  mod.rs  must_interact.rs  no_angle.rs  no_ring.rs  nonempty.rs  offgrid.rs  ring_covers_boundary.rs  wide_uncovered.rs  windowed_density.rs
tests/: connectivity.rs  core_suite_check.rs  engine.rs  ihp-sg13cmos5l.rs  ihp-sg13g2.rs
(+70 files in other folders)
